environments/prd/targeting-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: targeting-service
  namespace: targeting-service-prd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: targeting-service
  template:
    metadata:
      labels:
        app: targeting-service
    spec:
      imagePullSecrets:
        - name: acr-pull-secret
      containers:
        - name: targeting-service
          image: toggleacr.azurecr.io/targeting-service:a630654
          ports:
            - containerPort: 8003
